--- a/deb/enterprisestoragebox/etc/enterprisestoragebox/php.ini
+++ b/deb/enterprisestoragebox/etc/enterprisestoragebox/php.ini
@@ -1816,14 +1816,14 @@ ldap.max_links = -1
 ; End:
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;
-; OpenMediaVault settings ;
+; EnterpriSestorageBox settings ;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 ; Paths and Directories
 include_path = ".:/usr/share/php"
 
 ; Pam Authentication Support (see /etc/pam.d) ;
-pam.servicename = "openmediavault";
+pam.servicename = "enterprisestoragebox";
 
 ; Default timeout for socket based streams (seconds)
 ; http://php.net/default-socket-timeout
